<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculateValue"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        tools:ignore="MissingConstraints"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_calculate"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/origen"
                android:textStyle="bold" />
            <Spinner
                android:id="@+id/spinnerOrigen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destino"
                android:gravity="center"
                android:textStyle="bold" />
            <Spinner
                android:id="@+id/spinnerDestino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>
        </LinearLayout>
        <TableLayout
            android:id="@+id/linearLayoutResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_gravity="center"
            android:orientation="horizontal">


        </TableLayout>
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

        </LinearLayout>
        <Button
            android:id="@+id/Calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcular_valores"
            android:textColor="@color/white"
            android:textSize="25dp"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="43dp"
            tools:ignore="MissingConstraints" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>